# scidk

./: .commitmsg  .coveragerc  .env  .env.beta  .env.dev  .env.example  .env.stable  .gitignore  .gitmodules  .output.txt  CROSS_DATABASE_TRANSFER_V2_IMPLEMENTATION.md  DEMO_PROGRESS_INDICATORS.md  DEMO_SETUP.md  DEVELOPMENT.md  FEATURE_INDEX.md  IMPLEMENTATION_COMPLETION_GUIDE.md  IMPLEMENTATION_STATUS_CURRENT.md  MAPS_TEST_COVERAGE.md  Makefile  PARAMETER_SYSTEM_DESIGN.md  PHASE_2B_2C_STATUS.md  QUICKSTART.md  README.md  SCIDK_DATA_IMPLEMENTATION_STATUS.md  SCRIPTS_ARCHITECTURE_STATUS.md  SCRIPTS_REFACTOR_COMPLETE.md  SCRIPTS_REFACTOR_PLAN.md  SCRIPT_CONTRACTS_GUIDE.md  SECURITY_HARDENING_RECOMMENDATIONS.md  SESSION_HANDOFF_PROMPT.md  SESSION_SUMMARY_2026-02-20.md  analyze_feedback_refactored.py  dev_cli.py  docker-compose.neo4j.yml  package-lock.json  package.json  prev_plan.txt  pyproject.toml  requirements-dev.txt  requirements-graphrag.txt  (+7 more)
.github/: pull_request_template.md
Requests.xlsx/: Requests.xlsx
dev/: LICENSE  README-planning.md  cleanup-candidates-2025-08-21.md  cli.py  core-architecture.md  cycle-review-2025-08-18.md  cycles.md  deployment.md  interpreters.md  new_cli.py  plan-next-increments-2025-08-21.md  plugins.md  prompts.md
docs/: API.md  ARCHITECTURE.md  DEMO_SETUP.md  DEPLOYMENT.md  E2E_and_Neo4j_Task_Planning_REVISED.md  MVP_Architecture_Overview_REVISED.md  OPERATIONS.md  PLUGIN_INSTANCES.md  PLUGIN_LABEL_ENDPOINTS.md  SECURITY.md  SciDK_Architecture_Vision.md  TROUBLESHOOTING.md  branching-and-ci.md  e2e-testing.md  interpreters.md  ipynb-streaming-optimization.md  plugins.md  testing.md  ux-runbook-2025-09-12.md
e2e/: REMAINING_TEST_FIXES.md  alerts.spec.ts  auth-fixture.ts  auth.spec.ts  browse.spec.ts  chat-graphrag.spec.ts  chat.spec.ts  cleanup-auth.py  config-export-import.spec.ts  core-flows.spec.ts  files-browse.spec.ts  files-snapshot.spec.ts  global-setup.ts  global-teardown.ts  home.spec.ts  integrations-advanced.spec.ts  integrations-label-discovery.spec.ts  integrations.spec.ts  labels-arrows.spec.ts  labels-source-badges.spec.ts  labels.spec.ts  links-advanced.spec.ts  links.spec.ts  logs-viewer.spec.ts  map.spec.ts  maps-saved-maps.spec.ts  maps-visualization-modes.spec.ts  negative.spec.ts  playwright.config.ts  plugin-graph-integration.spec.ts  plugin-instances.spec.ts  progress-indicators.spec.ts  scan.spec.ts  settings-advanced.spec.ts  settings-api-endpoints.spec.ts  settings-fuzzy-matching.spec.ts  settings-table-formats.spec.ts  settings.spec.ts  smoke.spec.ts
neo4j/: __init__.py
pytest-of-patch/: pytest-current
query_library/: scidk_queries.yaml
scidk/: __init__.py  __main__.py  app.py
scidk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scripts/: README.md  analyze_feedback.py  bootstrap-dev.sh  demo-mvp-iter-2025-08-19-gdu-ncdu.sh  dev.sh  init_env.sh  (+5 more)
(+736 files in other folders)
