[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scidk"
version = "0.0.1"
description = "SciDK - Science Data Kit (MVP)"
authors = [{name = "SciDK Team"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Flask>=3.0",
  "pytest>=7.4",
  "openpyxl>=3.1",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
# Dev/test dependencies used locally and in CI
dev = [
  "pytest>=7.4",
  "pytest-playwright==0.4.3",
  "playwright==1.40.0",
  "requests>=2.32",
]

[project.scripts]
scidk-serve = "scidk.app:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["scidk*"]
exclude = ["dev*", "data*", "singularity*", "scripts*", "*.dist-info*", "*.egg-info*"]

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
addopts = "-q"
markers = [
  "e2e: end-to-end tests",
  "slow: slow tests",
]
