[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scidk"
version = "0.0.1"
description = "SciDK - Science Data Kit (MVP)"
authors = [{name = "SciDK Team"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "Flask>=3.0",
  "ijson>=3.2",
  "openpyxl>=3.1",
  "PyYAML>=6.0",
  "neo4j>=5.14",
  "psutil>=5.9",
  "python-dateutil>=2.8",
]

[project.optional-dependencies]
# Dev/test dependencies used locally and in CI
dev = [
  "pytest>=7.4",
  "pytest-playwright==0.4.3",
  "playwright==1.40.0",
  "requests>=2.32",
  "beautifulsoup4>=4.12",
  "coverage>=7.4",
]

# Optional LLM provider (only needed if you enable Graphrag LLM features)
llm = [
  "ollama>=0.3",
]

[project.scripts]
scidk-serve = "scidk.app:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["scidk*"]
exclude = ["dev*", "data*", "singularity*", "scripts*", "neo4j*", "tests*", "*.dist-info*", "*.egg-info*"]

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
addopts = "-ra"
markers = [
  "unit: fast, pure unit tests",
  "integration: tests that touch DB/files/HTTP without browser",
  "e2e: end-to-end Playwright/browser tests",
  "slow: slow tests",
  "smoke: short, high-signal tests",
]
